<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="@dimen/ic_delete"
            android:layout_height="@dimen/ic_delete"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:src="@drawable/outline_delete_sweep_white_36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toLeftOf="@id/deleteIcon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13dp" />

    </RelativeLayout>

    <android.support.design.card.MaterialCardView
        android:id="@+id/viewForeground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:contentPadding="16dp">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/firstRowLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/alarmTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/default_alarm_time"
                    android:textSize="40sp"/>

                <com.polyak.iconswitch.IconSwitch
                    android:id="@+id/alarmEnabledSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    app:isw_icon_left="@drawable/outline_alarm_off_black_36"
                    app:isw_icon_right="@drawable/outline_alarm_on_black_36"
                    app:isw_background_color="@android:color/white"
                    app:isw_thumb_color_left="@color/colorPrimaryDark"
                    app:isw_thumb_color_right="@color/colorPrimaryDark"
                    app:isw_inactive_tint_icon_left="@color/colorPrimary"
                    app:isw_inactive_tint_icon_right="@color/colorPrimary"
                    app:isw_active_tint_icon_left="@android:color/white"
                    app:isw_active_tint_icon_right="@android:color/white"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/alarmTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/alarm_title"/>
        </LinearLayout>
    </android.support.design.card.MaterialCardView>
</FrameLayout>